poke/testsuite/poke.pkl/pow-diag-1.pk
/* { dg-do compile } */

defvar a = 20 ** "foo"; /* { dg-error "expected an integer" } */
